// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CLIQ Ciné-Real retrieve and find events 1`] = `
[
  {
    "category": "event",
    "overview": {
      "actors": [],
      "categories": [],
      "directors": [],
      "duration": 10800000,
    },
    "performances": [
      {
        "accessibility": {},
        "bookingUrl": "https://share.thecliq.app/event/alien",
        "notes": "Presented by Cinebug",
        "status": {
          "soldOut": true,
        },
        "time": 1772132400000,
      },
    ],
    "showingId": "thecliq.app-4d11dc26-e304-4e4f-bf2c-4f499e9c6fbe",
    "title": "Alien at Ciné Real",
    "url": "https://share.thecliq.app/event/alien",
  },
]
`;

exports[`CLIQ Galleria Objets retrieve and find events 1`] = `
[
  {
    "category": "event",
    "overview": {
      "actors": [],
      "categories": [],
      "directors": [],
      "duration": 14400000,
    },
    "performances": [
      {
        "accessibility": {},
        "bookingUrl": "https://share.thecliq.app/event/frame-by-frame-x-turning-pages",
        "notes": "Presented by FRAME BY FRAME",
        "status": {
          "soldOut": true,
        },
        "time": 1770919243000,
      },
    ],
    "showingId": "thecliq.app-1ba19bcb-90d2-4dd4-9622-02f6b6bbf09c",
    "title": "FRAME BY FRAME X TURNING PAGES",
    "url": "https://share.thecliq.app/event/frame-by-frame-x-turning-pages",
  },
]
`;
